apps/navidrome/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
spec:
  selector:
    matchLabels:
      app: navidrome
  serviceName: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - image: ghcr.io/navidrome/navidrome:0.64.1
          name: navidrome
          ports:
            - containerPort: 4533
              name: http
          readinessProbe:
            httpGet:
              path: /app/index.html
              port: 4533
            initialDelaySeconds: 5
            periodSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /data
            - name: cache
              mountPath: /data/cache
            - name: music
              mountPath: /music
              readOnly: true
      volumes:
        - name: music
          persistentVolumeClaim:
            claimName: nfs-music
        - name: cache
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
