apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  ports:
    - port: 4533
  selector:
    app: navidrome
